--- a/SkeletonKinect2UDP/SkeletonKinect2UDP.cfg
+++ b/SkeletonKinect2UDP/SkeletonKinect2UDP.cfg
@@ -16,11 +16,16 @@
 # 192.168.0.5		Needle insertion setup target 2
 # 192.168.0.6		Needle insertion setup host 2
 # 192.168.0.9		Motion tracker host
-# 192.168.0.255	    Needle insertion setup broadcast address (sent to everyone in the network)
+# 192.168.0.255		Needle insertion setup broadcast address (sent to everyone in the network)
+
+# Valid joint names:
+#	--> chooses joints for Kinect to capture and report on
+#-------------------------------------------
+# 
 
 ip_local    = 142.244.62.54
-port_local  = 7778
+port_local  = 12000
 ip_remote   = 142.244.62.44
-port_remote = 7779
-num_markers = 2
-name_markers = LeftFoot, RightFoot
+port_remote = 12001
+num_joints = 2
+name_joints = LeftFoot, RightFoot
