Initial complete compilation for Kinect joint tracking with UDP communication implemented.

--- a/SkeletonKinect2UDP/SkeletonBasics-D2D.vcxproj.filters
+++ b/SkeletonKinect2UDP/SkeletonBasics-D2D.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClInclude Include="data_transmission.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SkeletonBasics.rc" />
@@ -33,6 +36,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SkeletonKinect2UDP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="data_transmission.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
