--- a/SkeletonKinect2UDP/SkeletonKinect2UDP.cfg
+++ b/SkeletonKinect2UDP/SkeletonKinect2UDP.cfg
@@ -6,7 +6,7 @@
 #	--> chooses the local NIC and thus network to use for streaming
 #-------------------------------------------
 # 192.168.0.7		Needle insertion network
-# 142.244.62.48	    ece.ualberta.ca network
+# 142.244.62.48		ece.ualberta.ca network
 
 # Valid remote IPs:
 #	--> chooses the IP address of the PC to stream to or multiple PCs (broadcast address)
@@ -18,14 +18,33 @@
 # 192.168.0.9		Motion tracker host
 # 192.168.0.255		Needle insertion setup broadcast address (sent to everyone in the network)
 
-# Valid joint names:
+# Valid joint indices:
 #	--> chooses joints for Kinect to capture and report on
 #-------------------------------------------
-# 
+# 0			NUI_SKELETON_POSITION_HIP_CENTER
+# 1			NUI_SKELETON_POSITION_SPINE
+# 2			NUI_SKELETON_POSITION_SHOULDER_CENTER
+# 3			NUI_SKELETON_POSITION_HEAD
+# 4			NUI_SKELETON_POSITION_SHOULDER_LEFT
+# 5			NUI_SKELETON_POSITION_ELBOW_LEFT
+# 6			NUI_SKELETON_POSITION_WRIST_LEFT
+# 7			NUI_SKELETON_POSITION_HAND_LEFT
+# 8			NUI_SKELETON_POSITION_SHOULDER_RIGHT
+# 9			NUI_SKELETON_POSITION_ELBOW_RIGHT
+# 10			NUI_SKELETON_POSITION_WRIST_RIGHT
+# 11			NUI_SKELETON_POSITION_HAND_RIGHT
+# 12			NUI_SKELETON_POSITION_HIP_LEFT
+# 13			NUI_SKELETON_POSITION_KNEE_LEFT
+# 14			NUI_SKELETON_POSITION_ANKLE_LEFT
+# 15			NUI_SKELETON_POSITION_FOOT_LEFT
+# 16			NUI_SKELETON_POSITION_HIP_RIGHT
+# 17			NUI_SKELETON_POSITION_KNEE_RIGHT
+# 18			NUI_SKELETON_POSITION_ANKLE_RIGHT
+# 19			NUI_SKELETON_POSITION_FOOT_RIGHT
 
 ip_local    = 142.244.62.54
 port_local  = 12000
 ip_remote   = 142.244.62.44
 port_remote = 12001
-num_joints = 2
-name_joints = LeftFoot, RightFoot
+num_joints  = 2
+ind_joints  = 6, 10
