--- a/SkeletonKinect2UDP/SkeletonBasics-D2D.vcxproj
+++ b/SkeletonKinect2UDP/SkeletonBasics-D2D.vcxproj
@@ -170,11 +170,15 @@
   <ItemGroup>
     <ClInclude Include="config.h" />
     <ClInclude Include="data_transmission.h" />
+    <ClInclude Include="log.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SkeletonBasics.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="config.cpp" />
+    <ClCompile Include="data_transmission.cpp" />
+    <ClCompile Include="log.cpp" />
     <ClCompile Include="SkeletonKinect2UDP.cpp" />
   </ItemGroup>
   <ItemGroup>
